# word-game

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json
generate_letter_list/: constants.py  generate_letter_list.py  test_generate_letter_list.py  test_helpers.py
generate_letter_list/generation/: generate.py  test_generate.py
generate_letter_list/word_finding/: direction_funnction_map.py  find_possible_words.py  find_words.py  test_find_possible_words.py  test_find_words.py
generate_letter_list_rust/: Cargo.toml  Dockerfile  Makefile
generate_letter_list_rust/src/: constants.rs  create_grid.rs  direction_function_map.rs  find_possible_words.rs  find_words.rs  generate.rs  main.rs  std_ext.rs  structs.rs  test_words.json  trie.rs
python/: generate_letter_list.py  test_generate_letter_list.py
src/: ApiLayer.js  App.css  App.js  App.scss  App.spec.js  App.test.js  general.js  index.js  reactTestSetup.js
src/CreatePaths/: areLettersAdjacent.js  areLettersAdjacent.spec.js  createPaths.js  createPaths.spec.js  findLocationsOfLetter.js  findLocationsOfLetter.spec.js  fixLetter.js  fixLetter.spec.js  fixPreviousEntries.js  fixPreviousEntries.spec.js  removePreviouslyFoundLetters.js  removePreviouslyFoundLetters.spec.js  returnPositionsOfAdjacentCharacters.js  returnPositionsOfAdjacentCharacters.spec.js
src/Grid/: Grid.js  Grid.scss  Grid.spec.js  Grid.test.js
src/InputField/: InputField.js
src/Square/: Square.js  Square.scss  Square.spec.js  Square.test.js
src/common/: constants.js  (+18 more)
visualisations/: initial.csv
(+109 files in other folders)
