[package]
name = "generate_letter_list_rust"
version = "0.1.0"
authors = ["callumfairbairn <callum.fairbairn@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
cute = "0.3.0"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }